<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:drawerLayoutCornerSize="0dp"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/header" />

        <TextView
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Previous Values Will Be In Brackets [Previous Value]"
            android:textColor="#828282"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>
        
        <ScrollView
            android:id="@+id/settingsScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fillViewport="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/noteText"
            app:layout_constraintBottom_toTopOf="@id/settingsErrText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollViewConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">

                <ExpandableListView
                    android:id="@+id/settingsListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:childDivider="@android:color/darker_gray"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="1dp"
                    android:focusable="false"
                    android:footerDividersEnabled="true"
                    android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <EditText
            android:id="@+id/settingsErrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/settingsScrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/settingsApplyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply Changes"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/settingsErrText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>